Complete Particle Skill Test

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!doctype html>
 <html>
   <head>
-    <title>Sample App</title>
-    <link rel="stylesheet" href="/static/styles.css">
+    <title>Tyler Alves - Particle Skill Test</title>
+    <link rel="stylesheet" href="/dist/styles.css">
+    <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   </head>
   <body>
     <div id='root'>
     </div>
-    <script src="/static/bundle.js"></script>
+    <script src="/dist/bundle.js"></script>
   </body>
 </html>
